syntax = "proto3";

import "google/protobuf/timestamp.proto";

package catalogue;

option go_package = "shared/proto/catalogue;catalogue";

service CatalogueService {
  rpc CreateCategory(CreateCategoryRequest) returns (Category);
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
}


message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message ListCategoriesRequest {}

message ListCategoriesResponse {
  repeated Category categories = 1;
}
